--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-locale                   : "en-us"
+locale                   : "Singapore"
 title                    : "Shujiao Xie"
 title_separator          : "-"
 name                     : &name "Shujiao Xie"
-description              : &description "personal description"
+description              : &description "This is the personal website of Shujiao Xie"
 url                      : https://shujiaox.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "shujiaox/shujiaox.github.io"
@@ -88,7 +88,7 @@ author:
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "http://yourfullgooglescholarurl.com"
   email            : "shujiao1832132@gmail.com"
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  researchgate     : "https://www.researchgate.net/profile/Shujiao-Xie"
   uri              :
   bitbucket        :
   codepen          :
@@ -96,13 +96,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : " https://shujiaox.github.io/"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/shujiao-xie-a089bb184/"
   orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
