--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
   - title: "Publications"
     url: /publications/    
     
-  - title: "Projects"
+  - title: "Portfolio"
     url: /portfolio/
         
   - title: "Blog Posts"
